@@ -7,6 +7,8 @@ mlUnit development snapshot
 
   - assert_error may take a function handle or an eval string for execution
   - assert_error can check for the error identifier or even the stack
+  - Changed assert_warning's argument order, to be consistent with assert_error
+    order.
 
   - Fix: wrong assert_* usage yields a failure, but should yield an error
   - Fix: calling assert_warning without arguments is confusing
